--- a/config/templates/socialaccount/login.html
+++ b/config/templates/socialaccount/login.html
@@ -14,7 +14,7 @@
             <form method="post">
                 {% csrf_token %}
                 <button type="submit"
-                class="w-full flex items-center justify-center bg-blue-600 hover:bg-blue-700 text-white font-medium py-3 px-4 rounded-lg shadow transition duration-300">
+                class="w-full flex items-center justify-center btn btn-outline btn-primary font-medium py-3 px-4 rounded-lg shadow transition duration-300">
                  <svg class="w-5 h-5 mr-2" viewBox="0 0 48 48">
                      <path fill="#4285F4" d="M24 9.5c3.54 0 6.67 1.22 9.19 3.25l6.85-6.85C35.91 2.15 30.3 0 24 0 14.66 0 6.67 5.35 2.8 13.16l8.07 6.27C13.11 12.65 18.11 9.5 24 9.5z"></path>
                      <path fill="#34A853" d="M46.14 24.46c0-1.6-.14-3.13-.4-4.6H24v9.39h12.51c-.58 3.03-2.21 5.63-4.69 7.39l7.49 5.83c4.41-4.07 6.97-10.07 6.97-17.01z"></path>
