--- a/config/templates/socialaccount/login.html
+++ b/config/templates/socialaccount/login.html
@@ -1,30 +1,30 @@
 {% extends "base.html" %}
 {% load i18n %}
 {% load socialaccount %}
-
 {% block content %}
-<div class="flex items-center justify-center transition-colors duration-300">
-    <div class="w-full max-w-md p-6 bg-white dark:bg-gray-800 rounded-lg shadow-md">
-        <h2 class="text-2xl font-bold text-center text-gray-800 dark:text-white">Sign in with Google</h2>
-        <p class="text-gray-600 dark:text-gray-400 text-center mt-2">
-            You're about to sign in using your Google account.
-        </p>
-
-        <div class="mt-6">
-            <form method="post">
-                {% csrf_token %}
-                <button type="submit"
-                class="w-full flex items-center justify-center btn btn-outline btn-primary font-medium py-3 px-4 rounded-lg shadow transition duration-300">
-                 <svg class="w-5 h-5 mr-2" viewBox="0 0 48 48">
-                     <path fill="#4285F4" d="M24 9.5c3.54 0 6.67 1.22 9.19 3.25l6.85-6.85C35.91 2.15 30.3 0 24 0 14.66 0 6.67 5.35 2.8 13.16l8.07 6.27C13.11 12.65 18.11 9.5 24 9.5z"></path>
-                     <path fill="#34A853" d="M46.14 24.46c0-1.6-.14-3.13-.4-4.6H24v9.39h12.51c-.58 3.03-2.21 5.63-4.69 7.39l7.49 5.83c4.41-4.07 6.97-10.07 6.97-17.01z"></path>
-                     <path fill="#FBBC05" d="M11.2 28.63c-1.66-4.99-1.66-10.37 0-15.36L3.13 6.9C-1.04 13.28-1.04 22.68 3.13 29.06l8.07-6.27z"></path>
-                     <path fill="#EA4335" d="M24 48c6.3 0 11.71-2.1 15.62-5.7l-7.49-5.83c-2.1 1.42-4.75 2.27-8.13 2.27-5.89 0-10.89-3.15-13.13-7.8l-8.07 6.27C6.67 42.65 14.66 48 24 48z"></path>
-                 </svg>
-                 Continue with Google
-                </button>
-            </form>
+    <div class="flex items-center justify-center transition-colors duration-300">
+        <div class="w-full max-w-md p-6 bg-white dark:bg-gray-800 rounded-lg shadow-md">
+            <h2 class="text-2xl font-bold text-center text-gray-800 dark:text-white">Sign in with Google</h2>
+            <p class="text-gray-600 dark:text-gray-400 text-center mt-2">You're about to sign in using your Google account.</p>
+            <div class="mt-6">
+                <form method="post">
+                    {% csrf_token %}
+                    <button type="submit"
+                            class="w-full flex items-center justify-center btn btn-outline btn-primary font-medium py-3 px-4 rounded-lg shadow transition duration-300">
+                        <svg class="w-5 h-5 mr-2" viewBox="0 0 48 48">
+                            <path fill="#4285F4" d="M24 9.5c3.54 0 6.67 1.22 9.19 3.25l6.85-6.85C35.91 2.15 30.3 0 24 0 14.66 0 6.67 5.35 2.8 13.16l8.07 6.27C13.11 12.65 18.11 9.5 24 9.5z">
+                            </path>
+                            <path fill="#34A853" d="M46.14 24.46c0-1.6-.14-3.13-.4-4.6H24v9.39h12.51c-.58 3.03-2.21 5.63-4.69 7.39l7.49 5.83c4.41-4.07 6.97-10.07 6.97-17.01z">
+                            </path>
+                            <path fill="#FBBC05" d="M11.2 28.63c-1.66-4.99-1.66-10.37 0-15.36L3.13 6.9C-1.04 13.28-1.04 22.68 3.13 29.06l8.07-6.27z">
+                            </path>
+                            <path fill="#EA4335" d="M24 48c6.3 0 11.71-2.1 15.62-5.7l-7.49-5.83c-2.1 1.42-4.75 2.27-8.13 2.27-5.89 0-10.89-3.15-13.13-7.8l-8.07 6.27C6.67 42.65 14.66 48 24 48z">
+                            </path>
+                        </svg>
+                        Continue with Google
+                    </button>
+                </form>
+            </div>
         </div>
     </div>
-</div>
 {% endblock body %}
