Add pages for adding and editing form templates on the frontend.

--- a/config/templates/admin/odk_publish/formtemplate/change_form.html
+++ b/config/templates/admin/odk_publish/formtemplate/change_form.html
@@ -1,92 +1,28 @@
 {% extends "admin/change_form.html" %}
 {% load socialaccount %}
+{% load static %}
 {% block extrahead %}
     {{ block.super }}
     {% get_social_accounts user as accounts %}
-    {# Google Picker code based on https://developers.google.com/drive/picker/guides/overview#hiworld #}
+    {# Start Google Picker code #}
     <script>
-    let tokenClient;
-    let accessToken = "{{ accounts.google.0.socialtoken_set.all.0.token }}";
-    let pickerInited = false;
-    let gisInited = false;
-
-    // Use the API Loader script to load google.picker
-    function onApiLoad() {
-      gapi.load('picker', onPickerApiLoad);
-    }
-
-    function onPickerApiLoad() {
-      pickerInited = true;
-      maybeAddPickerButton();
-    }
-
-    function gisLoaded() {
-      tokenClient = google.accounts.oauth2.initTokenClient({
-        client_id: '{{ google_client_id }}',
-        scope: '{{ google_scopes }}',
-        callback: '', // defined later
-      });
-      gisInited = true;
-      maybeAddPickerButton();
-    }
-
-    function maybeAddPickerButton() {
-      if (pickerInited && gisInited) {
-        // Add a button for launching the Google Picker dialog after the "template URL" input
-        document.getElementById('id_template_url').insertAdjacentHTML(
-          'afterend',
-          '<button onclick="createPicker()" type="button">Select with Google Picker</button>'
-        );
-      }
-    }
-
-    // Create and render a Google Picker object for selecting from Drive.
-    function createPicker() {
-      const showPicker = () => {
-        const picker = new google.picker.PickerBuilder()
-            .addView(
-                new google.picker.DocsView(google.picker.ViewId.SPREADSHEETS)
-                .setMode(google.picker.DocsViewMode.LIST)
-                // Exclude Excel files stored in Google Drive (https://drive.google.com/file/... URLs)
-                // which gspread won't be able to open (raises gspread.exceptions.NoValidUrlKeyFound)
-                .setMimeTypes("application/vnd.google-apps.spreadsheet"))
-            .enableFeature(google.picker.Feature.NAV_HIDDEN)
-            .setOAuthToken(accessToken)
-            .setDeveloperKey('{{ google_api_key }}')
-            .setCallback(pickerCallback)
-            .setAppId('{{ google_app_id }}')
-            .build();
-        picker.setVisible(true);
-      }
-
-      // Request an access token.
-      tokenClient.callback = async (response) => {
-        if (response.error !== undefined) {
-          throw (response);
-        }
-        accessToken = response.access_token;
-        showPicker();
-      };
-
-      if (accessToken) {
-        // Skip display of account chooser and consent dialog for an existing session.
-        tokenClient.requestAccessToken({prompt: ''});
-      } else {
-        // Prompt the user to select a Google Account and ask for consent to share their data
-        // when establishing a new session.
-        tokenClient.requestAccessToken({prompt: 'consent'});
-      }
-    }
-
-    // Callback called when the user selects a spreadsheet in the Google Picker dialog
-    function pickerCallback(data) {
-      if (data[google.picker.Response.ACTION] == google.picker.Action.PICKED) {
-        const doc = data[google.picker.Response.DOCUMENTS][0];
-        url = doc[google.picker.Document.URL];
-        document.getElementById('id_template_url').value = url;
-      }
+    let googlePickerConfig = {
+        accessToken: "{{ accounts.google.0.socialtoken_set.all.0.token }}",
+        clientId: "{{ google_client_id }}",
+        scopes: "{{ google_scopes }}",
+        apiKey: "{{ google_api_key }}",
+        appId: "{{ google_app_id }}",
+        inputSelector: "#id_template_url",
+        initCallback: function() {
+            // Add a button for launching the Google Picker dialog after the "template URL" input
+            document.getElementById('id_template_url').insertAdjacentHTML(
+              'afterend',
+              '<button onclick="createPicker()" type="button">Select with Google Picker</button>'
+            );
+        },
     }
     </script>
+    <script src="{% static 'js/google_picker.js' %}"></script>
     <!-- Load the Google API Loader script. -->
     <script async
             defer
