--- a/config/templates/odk_publish/form_template_list.html
+++ b/config/templates/odk_publish/form_template_list.html
@@ -4,5 +4,9 @@
     Form Templates
 {% endblock page_header %}
 {% block content %}
+    <div class="mb-4 items-end justify-between space-y-4 sm:flex sm:space-y-0 md:mb-8">
+        <a href="{% url 'odk_publish:add-form-template' request.odk_project.pk %}"
+           class="btn btn-outline mr-4">Add form template</a>
+    </div>
     {% include "patterns/tables/table-partial.html" %}
 {% endblock content %}
