--- a/config/templates/odk_publish/change_form_template.html
+++ b/config/templates/odk_publish/change_form_template.html
@@ -6,8 +6,9 @@
         {{ form.media }}
         <form method="post" class="max-w-2xl">
             {% csrf_token %}
+            {% for field in form.hidden_fields %}{{ field }}{% endfor %}
             <div class="grid gap-4 sm:grid-cols-1 sm:gap-6">
-                {% for field in form %}
+                {% for field in form.visible_fields %}
                     <div id="id_{{ field.name }}_container">
                         {{ field.label_tag }}
                         {{ field }}
@@ -32,7 +33,9 @@
         scopes: "{{ google_scopes }}",
         apiKey: "{{ google_api_key }}",
         appId: "{{ google_app_id }}",
-        inputSelector: "#id_template_url",
+        urlInputSelector: "#id_template_url",
+        userInputSelector: "#id_template_url_user",
+        user: {{ user.id }},
     }
     </script>
     <script src="{% static 'js/google_picker.js' %}"></script>
