Add a message about numeric values during app user import.

--- a/config/templates/odk_publish/app_user_import.html
+++ b/config/templates/odk_publish/app_user_import.html
@@ -91,6 +91,20 @@
                     <p class="mb-1 dark:text-gray-400">
                         {% trans "Please correct these errors in your data where possible, then reupload it using the form above." %}
                     </p>
+                    <div class="flex items-center p-4 mb-4 text-sm text-yellow-800 rounded-lg bg-yellow-50 dark:bg-gray-800 dark:text-yellow-300"
+                         role="alert">
+                        <svg class="shrink-0 inline w-4 h-4 me-3"
+                             aria-hidden="true"
+                             xmlns="http://www.w3.org/2000/svg"
+                             fill="currentColor"
+                             viewBox="0 0 20 20">
+                            <path d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5ZM9.5 4a1.5 1.5 0 1 1 0 3 1.5 1.5 0 0 1 0-3ZM12 15H8a1 1 0 0 1 0-2h1v-3H8a1 1 0 0 1 0-2h2a1 1 0 0 1 1 1v4h1a1 1 0 0 1 0 2Z" />
+                        </svg>
+                        <span class="sr-only">Info</span>
+                        <div>
+                            If some numeric values are not displayed correctly here, consider setting the correct number format for those values in your original document, then try importing it again.
+                        </div>
+                    </div>
                     <table class="text-left w-full h-full text-sm text-gray-500 dark:text-gray-400 dark:bg-gray-800">
                         <thead class="text-xs text-gray-700 uppercase bg-primary-100 dark:bg-gray-700 dark:text-gray-400">
                             <tr>
@@ -139,6 +153,20 @@
             {% endif %}
         {% else %}
             <h3 class="font-semibold text-gray-900 dark:text-white mb-0.5">{% trans "Preview" %}</h3>
+            <div class="flex items-center p-4 mb-4 text-sm text-yellow-800 rounded-lg bg-yellow-50 dark:bg-gray-800 dark:text-yellow-300"
+                 role="alert">
+                <svg class="shrink-0 inline w-4 h-4 me-3"
+                     aria-hidden="true"
+                     xmlns="http://www.w3.org/2000/svg"
+                     fill="currentColor"
+                     viewBox="0 0 20 20">
+                    <path d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5ZM9.5 4a1.5 1.5 0 1 1 0 3 1.5 1.5 0 0 1 0-3ZM12 15H8a1 1 0 0 1 0-2h1v-3H8a1 1 0 0 1 0-2h2a1 1 0 0 1 1 1v4h1a1 1 0 0 1 0 2Z" />
+                </svg>
+                <span class="sr-only">Info</span>
+                <div>
+                    If some numeric values are not displayed correctly here, consider setting the correct number format for those values in your original document, then try importing it again.
+                </div>
+            </div>
             <table class="text-left w-full h-full text-sm text-gray-500 dark:text-gray-400 dark:bg-gray-800">
                 <thead class="text-xs text-gray-700 uppercase bg-primary-100 dark:bg-gray-700 dark:text-gray-400">
                     <tr>
