Bug fixes and add missing migration.

--- a/config/templates/odk_publish/form_template_detail.html
+++ b/config/templates/odk_publish/form_template_detail.html
@@ -31,6 +31,8 @@
                     </svg>
                     Publish
                 </a>
+                <a href="{% url 'odk_publish:edit-form-template' request.odk_project.id form_template.id %}"
+                   class="btn btn-outline ml-4">Edit Form Template</a>
             </div>
         </div>
         <!-- Column -->
