--- a/config/templates/odk_publish/app_user_detail.html
+++ b/config/templates/odk_publish/app_user_detail.html
@@ -11,6 +11,10 @@
     </style>
 {% endblock extra-css %}
 {% block content %}
+    <div class="mb-4">
+        <a href="{% url 'odk_publish:edit-app-user' request.odk_project.id app_user.id %}"
+           class="btn btn-outline">Edit App User</a>
+    </div>
     <h3 class="font-semibold text-xl text-gray-900 dark:text-white mb-2">QR Code Data</h3>
     {% if qr_code_data %}
         <input id="qr-code-data" type="hidden" value="{{ qr_code_data }}">
