--- a/config/templates/odk_publish/change_project.html
+++ b/config/templates/odk_publish/change_project.html
@@ -22,7 +22,7 @@
                 {% endfor %}
             </div>
         </div>
-        <h3 class="font-semibold text-gray-900 dark:text-white mb-2">Template variables</h3>
+        <h3 class="font-semibold text-gray-900 dark:text-white mb-2">Project-level Template Variables</h3>
         {{ variables_formset.management_form }}
         {% with num_cols=variables_formset.empty_form.visible_fields|length %}
             <table class="mb-4 text-left w-full h-full text-sm text-gray-500 dark:text-gray-400 dark:bg-gray-800">
